Add Call backs to save the model

--- a/Chest Opacities Detection Model.ipynb
+++ b/Chest Opacities Detection Model.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "da09be2f",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-04 16:52:48.870710: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Buliding the Neural network model\n",
     "import tensorflow as tf\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "18774da9",
    "metadata": {},
    "outputs": [],
@@ -38,30 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e1c0cb59",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 715 files belonging to 2 classes.\n",
-      "Using 572 files for training.\n",
-      "Using 143 files for validation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-04 16:52:51.666878: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Training and validating the dataset\n",
     "train_dataset, val_dataset = keras.utils.image_dataset_from_directory(path_to_images, class_names = ['Normal','Sick'], batch_size = 16, image_size = (395, 488), validation_split = 0.2, subset = \"both\", seed = 200)"
@@ -69,7 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "75d90f46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_augumentaion = keras.sequential(\n",
+    "[\n",
+    "    keras.layers.RandomFlip('horizontal'),\n",
+    "    keras.layers\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ce8b025",
    "metadata": {
     "scrolled": true
@@ -106,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0d9ec056",
    "metadata": {},
    "outputs": [],
@@ -116,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "47879a4c",
    "metadata": {},
    "outputs": [],
@@ -134,26 +121,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e15be25e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callbacks = [\n",
+    "    keras.callback.ModelCheckpoint(\n",
+    "        \n",
+    "        filepath = 'models/chest_opacities_detection_model.keras',\n",
+    "        save_best_only = True,\n",
+    "        monitor = 'val_loss'\n",
+    "        \n",
+    "   )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c055519c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "36/36 [==============================] - 339s 9s/step - loss: 1982.8849 - accuracy: 0.7710 - val_loss: 11.2972 - val_accuracy: 0.9441\n",
-      "Epoch 2/10\n",
-      " 9/36 [======>.......................] - ETA: 3:38 - loss: 10.6531 - accuracy: 0.9444"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "history = model.fit(\n",
-    "train_dataset,\n",
-    "epochs = 10,\n",
-    "validation_data = val_dataset\n",
+    "\n",
+    "    train_dataset,\n",
+    "    epochs = 30,\n",
+    "    validation_data = val_dataset,\n",
+    "    callbacks = callbacks\n",
+    "    \n",
     ")"
    ]
   },
